[workspace]
resolver = "2"
members = [
    "crates/*",
    "cumulus/client/block-builder",
    "cumulus/client/cirrus-executor",
    "cumulus/client/consensus/relay-chain",
    "cumulus/client/executor-gossip",
    "cumulus/pallets/executive",
    "cumulus/node",
    "cumulus/runtime",
    "cumulus/primitives",
    "cumulus/test/runtime",
    "cumulus/test/service",
    "substrate/*",
    "test/subspace-test-client",
    "test/subspace-test-runtime",
    "test/subspace-test-service",
]

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2-rfc = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
reed-solomon-erasure = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
sloth256-189 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
subspace-core-primitives = { opt-level = 3 }
subspace-archiving = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1

[patch.crates-io]
# TODO: Remove once chacha20poly1305 0.10 appears in libp2p's dependencies
chacha20poly1305 = { git = "https://github.com/RustCrypto/AEADs", rev = "06dbfb5571687fd1bbe9d3c9b2193a1ba17f8e99" }
libp2p = { git = "https://github.com/subspace/rust-libp2p", branch = "subspace-v2" }

[patch."https://github.com/subspace/substrate"]
sc-basic-authorship = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sc-block-builder = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sc-chain-spec = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sc-cli = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sc-client-api = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sc-client-db = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sc-consensus = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sc-consensus-slots = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sc-executor = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sc-informant = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sc-keystore = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sc-network = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sc-network-common = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sc-network-gossip = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sc-offchain = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sc-rpc = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sc-rpc-api = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sc-service = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sc-telemetry = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sc-tracing = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sc-transaction-pool = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sc-transaction-pool-api = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }

sp-api = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sp-application-crypto = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sp-arithmetic = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sp-block-builder = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sp-blockchain = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sp-consensus = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sp-consensus-slots = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sp-core = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sp-externalities = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sp-inherents = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sp-io = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sp-keystore = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sp-keyring = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sp-offchain = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sp-rpc = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sp-runtime = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sp-runtime-interface = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sp-session = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sp-state-machine = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sp-std = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sp-storage = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sp-timestamp = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sp-tracing = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sp-transaction-pool = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sp-trie = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
sp-version = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }

frame-benchmarking-cli = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
frame-executive = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
frame-support = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
frame-system = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
frame-system-rpc-runtime-api = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }

substrate-frame-rpc-system = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }

pallet-balances = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
pallet-sudo = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
pallet-timestamp = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
pallet-transaction-payment = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
pallet-transaction-payment-rpc = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
pallet-utility = { git = "https://github.com/subspace//substrate/", branch = "debug-syncing" }
